# PornReco

crawlers/: ReadMe.md  crawler_huaban.py  porn site set.txt
crawlers/batchDownloadImages/image/: pipelines.py  settings.py
crawlers/batchDownloadImages/image/spiders/: image_spider.py
crawlers/downloadImagesFromSinglePage/image/: items.py  pipelines.py
crawlers/downloadImagesFromSinglePage/image/spiders/: image_spider.py
others/: matlab_demo.m
skinDetection/: CMakeLists.txt  demo  main.cpp  xzdImageProcess.cpp  xzdImageProcess.h
skinDetection/include/: calSkinRatio.h~  xzdImageProcess.h~
skinDetection/skinDetection/: skinDetection.sln
skinDetection/skinDetection/skinDetection/: main.cpp
skinDetection/src/: calSkinRatio.cpp  xzdImageProcess.cpp  xzdImageProcess.cpp~
